==========
sbteclipse
==========

v1.5
====

#37: Use workspace default JRE (contribution of Jarod Liu <liuyuanzhi@gmail.com>)

v1.4
====

#31: Reference to scalaVersion is ambiguous
#28: Add skip-parents option
#27: Add info message "This might take some time ..." when command starts
#24: Switch to sbt 0.11

v1.3 (no release due to switch to sbt 0.11)
====

#22: Use test configuration for UpdateReport from updateClassifiers (improvement)
#21: Duplicate project dependency in Eclipse if normal and test dependency (bug)
#20: Multi-module library dependencies support broken (bug)
#10: Pretty print Eclipse XML files (feature)
#19: Added option for same target directory (feature)

v1.2
====

#11: Upgrade to Scalaz 6.0.1
#15: No more exception when using skip-root without sub-projects
#16: Using the new option with-sources will create source attachments for library dependencies

v1.1
====

closes #6: Upgraded to Scalaz 6.0
closes #2: Made project dependencies transitive
re #2: Added example showing nested project dependencies are resolved correctly
closes #3: Removed restriction to Scala 2.9