@@ -4,6 +4,8 @@ This project is a plugin for "sbt 0.11.x":http://github.com/harrah/xsbt/ providi
 
 h2. Latest changes
 
+* #46: Add managed source directories
+* #44: Dependency on scala compiler should be treated in special way
 * #37: Use workspace default JRE
 * #31: Reference to scalaVersion is ambiguous
 * #28: Add skip-parents option
