@@ -5,6 +5,8 @@ sbteclipse
 v1.5
 ====
 
+#46: Add managed source directories
+#44: Dependency on scala compiler should be treated in special way
 #37: Use workspace default JRE (contribution of Jarod Liu <liuyuanzhi@gmail.com>)
 
 v1.4
